# dynimgen

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml
src/: cli.rs  executor.rs  filters.rs  generator.rs  main.rs  state.rs
