[package]
name = "postergen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
resvg = "0.22.0"
tera = "1.15.0"
tiny-skia = "0.6.3"
tiny_http = "0.11.0"
url = "2.2.2"
usvg = "0.22.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
