[package]
name = "dynimgen"
version = "0.1.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = " A self-hosted dynamic image generator."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/dynimgen"
repository = "https://github.com/sigoden/dynimgen"
autotests = false
categories = ["command-line-utilities", "web-programming::http-server"]
keywords = ["dynamic", "image", "server", "generator", "cli"]

include = [
  "Cargo.toml",
  "LICENSE-MIT",
  "LICENSE-APACHE",
  "src/**/*",
]

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
clap = { version = "3.1.18", features = ["derive"] }
ctrlc = "3.2.2"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
qrcode = { version = "0.12.0", default-features = false, features = ["svg"] }
resvg = "0.22.0"
tera = "1.15.0"
threadpool = "1.8.1"
tiny-skia = "0.6.3"
tiny_http = "0.11.0"
ureq = "2.4.0"
url = "2.2.2"
usvg = "0.22.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
